[package]
name = "pwm-pca9685"
version = "0.3.1"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/pwm-pca9685-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the PCA9685 I2C 16-channel, 12-bit PWM/Servo/LED controller."
readme = "README.md"
keywords = ["pwm", "servo", "led", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/pwm-pca9685-rs"
documentation = "https://docs.rs/pwm-pca9685"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2021"

[dependencies]
embedded-hal = "1.0"
nb = "1"
embedded-hal-async = { version = "1", optional = true }
maybe-async-cfg = "0.2.3"

[dev-dependencies]
linux-embedded-hal = "0.4"
embedded-hal-mock = { version = "0.10", default-features = false, features = ["eh1"] }

[profile.release]
lto = true

[features]
std = []
async = ["dep:embedded-hal-async"]
